
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.yss.grpc.stream";
option java_outer_classname = "StreamDemoProto";

package com.yss.grpc.stream;

// The greeting service definition.
service GreeterStream {

  rpc SayHelloRequestStream (stream MyRequest) returns (MyReply) {}

  rpc SayHelloResponseStream (MyRequest) returns (stream MyReply) {}

  rpc SayHelloAllStream (stream MyRequest) returns (stream MyReply) {}

}

// The request message containing the user's name.
message MyRequest {
  string name = 1;
}

// The response message containing the greetings
message MyReply {
  string message = 1;
}